Style the index page

--- a/index.html
+++ b/index.html
@@ -30,42 +30,42 @@
     <p>Select up to four industries to compare</p>
     <p class="note">(you can change these at any time)</p>
 
-    <ul class="industry-list">
-      <li class="industry-item industry-clothing">
-        <label for="toggle-clothing">Clothing &amp; Apparel</label>
+    <ul class="industry-list frame">
+      <li class="industry-item industry-clothing bit-4">
         <input type="checkbox" id="toggle-clothing" value="Clothing &amp; Apparel" />
+        <label for="toggle-clothing">Clothing &amp; Apparel</label>
       </li>
-      <li class="industry-item industry-jewelry">
-        <label for="toggle-jewelry">Jewelry &amp; Accessories</label>
+      <li class="industry-item industry-jewelry bit-4">
         <input type="checkbox" id="toggle-jewelry" value="Jewelry &amp; Accessories" />
+        <label for="toggle-jewelry">Jewelry &amp; Accessories</label>
       </li>
-      <li class="industry-item industry-bags">
-        <label for="toggle-bags">Bags &amp; Shoes</label>
+      <li class="industry-item industry-bags bit-4">
         <input type="checkbox" id="toggle-bags" value="Bags &amp; Shoes" />
+        <label for="toggle-bags">Bags &amp; Shoes</label>
       </li>
-      <li class="industry-item industry-health">
-        <label for="toggle-health">Health &amp; Beauty</label>
+      <li class="industry-item industry-health bit-4">
         <input type="checkbox" id="toggle-health" value="Health &amp; Beauty" />
+        <label for="toggle-health">Health &amp; Beauty</label>
       </li>
-      <li class="industry-item industry-food">
-        <label for="toggle-food">Food &amp; Drink</label>
+      <li class="industry-item industry-food bit-4">
         <input type="checkbox" id="toggle-food" value="Food &amp; Drink" />
+        <label for="toggle-food">Food &amp; Drink</label>
       </li>
-      <li class="industry-item industry-home">
-        <label for="toggle-home">Home &amp; Garden</label>
+      <li class="industry-item industry-home bit-4">
         <input type="checkbox" id="toggle-home" value="Home &amp; Garden" />
+        <label for="toggle-home">Home &amp; Garden</label>
       </li>
-      <li class="industry-item industry-electronics">
-        <label for="toggle-electronics">Electronics</label>
+      <li class="industry-item industry-electronics bit-4">
         <input type="checkbox" id="toggle-electronics" value="Electronics" />
+        <label for="toggle-electronics">Electronics</label>
       </li>
-      <li class="industry-item industry-random">
-        <label for="toggle-random">Random</label>
+      <li class="industry-item industry-random bit-4">
         <input type="checkbox" id="toggle-random" value="Random" />
+        <label for="toggle-random">Random</label>
       </li>
     </ul>
 
-    <button class="submit">Submit</button>
+    <button class="btn btn-submit">Submit choices</button>
   </div>
 
   <script src="bower_components/jquery/dist/jquery.js"></script>
