Pass selected industries to confirmation page

--- a/confirm.html
+++ b/confirm.html
@@ -1,10 +1,9 @@
 <div id="main" role="main">
   <h1>Thank You</h1>
-  <p>Thanks for your choices. You chose [].</p>
+  <p>Thanks for your choices. You chose <span class="selected-industries"></span>.</p>
   <p>Want more information? Enter your email address below.</p>
 
   <form id="insight-form">
     <input type="email" class="email" placeholder="Email Address" />
-    <input type="submit" class="btn btn-submit" />
   </form>
 </div>
