--- a/confirm.html
+++ b/confirm.html
@@ -5,5 +5,6 @@
 
   <form id="insight-form">
     <input type="email" class="email" placeholder="Email Address" />
+    <input type="submit" class="btn btn-submit" value="Submit" />
   </form>
 </div>
